--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <div id="tips">
+    <p><strong>Notice:</strong> Scripts are updated weekly. For the latest scripts, join the beta/alpha server!</p>
+    <p><strong>Tips:</strong> Before using the TP scripts, teleport somewhere near the area. Or if it's a special area(ex: Enkanomiya, Sea of Bygone Era) TP to that map first then use the scripts.</p>
+  </div>
   <title>Lua Script Collection</title>
   <style>
     body {
@@ -40,6 +44,21 @@
       display: block;
       margin-top: 5px;
       color: #aaa;
+    }
+    #tips {
+      background: #1c1c1c;
+      border-left: 4px solid #4fc3f7;
+      padding: 10px 15px;
+      margin-bottom: 20px;
+      border-radius: 6px;
+    }
+    #tips p {
+      margin: 0 0 8px;
+      color: #ddd;
+      font-size: 0.95rem;
+    }
+    #tips p:last-child {
+      margin-bottom: 0;
     }
   </style>
 </head>
