--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <div id="tips">
     <p><strong>Notice:</strong> Scripts are updated weekly. For the latest scripts, join the beta/alpha server!</p>
     <p><strong>Tips:</strong> Before using the TP scripts, teleport somewhere near the area. Or if it's a special area(ex: Enkanomiya, Sea of Bygone Era) TP to that map first then use the scripts.</p>
-    <p>If you see want your script removed from here, contact me on discord <i>nukegh05t</i></p>
+    <p>If you want your script removed from here, contact me on discord <i>nukegh05t</i></p>
   </div>
   <title>Lua Script Collection</title>
   <style>
