--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p><strong>Tips:</strong> Before using the TP scripts, teleport somewhere near the area. Or if it's a special area(ex: Enkanomiya, Sea of Bygone Era) TP to that map first then use the scripts.</p>
     <p>If you want your script removed from here, contact me on discord <i>nukegh05t</i></p>
   </div>
+  <div id="highlight">Last updated 3rd Oct, 25</div>
   <title>Lua Script Collection</title>
   <style>
     body {
@@ -60,6 +61,13 @@
     }
     #tips p:last-child {
       margin-bottom: 0;
+    }
+    #highlight {
+      background: #1c1c1c;
+      border-left: 4px solid #f7ef4f;
+      padding: 10px 15px;
+      margin-bottom: 20px;
+      border-radius: 6px;
     }
   </style>
 </head>
