--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
   <input type="text" id="search" placeholder="Search scripts by title or author..." />
 
   <div id="script-list"></div>
+  
+  <!-- hitwebcounter Code START -->
+  <a href="https://www.hitwebcounter.com/" target="_blank">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=21445457&style=0036&nbdigits=4&type=page&initCount=65" title="Counters" Alt="Counters"   border="0" /></a>
 
   <script>
     // You must create a JSON index of your scripts since GitHub Pages doesn't allow folder listings.
@@ -111,7 +115,7 @@
         });
       });
     }
-
+  
     loadScripts();
   </script>
 </body>
